<resources>
    <string name="app_name">Gimme a hug</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_done">Done</string>
    <string name="title_activity_login">Log In</string>
    <string name="signup_email">Sign up with Email</string>
    <string name="signup_google">Sign up with Google+</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_username_hint">Username</string>
    <string name="signup_email_hint">Email</string>

    <string name="invalid_credentials_error">Given credentials are invalid</string>
    <string name="server_unrechable_error">Ooops! Can\'t reach the server right now</string>
    <string name="empty_form_error">You must fill all fields</string>
    <string name="password_not_secure_error">The password is not secure enough</string>

    <string name="login"><![CDATA[Already have an account? <b>Log in now</b>]]></string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymous_user_name">Anonymous</string>
    <string name="a_user_wants_hug">A user wants to hug you!</string>
    <string name="user_wants_hug">wants to hug you!</string>
    <string name="cant_create_error">Ooops! Can\'t create user. Already exist?</string>
    <string name="uploading_image">Uploading profile image</string>
    <string name="user_id">user_id</string>
    <string name="shared_preferences_name">com.davidmogar.gimmeahug.APP_PREFERENCES</string>
    <string name="max_radius">max_radius</string>
    <string name="following">Yay! You are now following this user</string>
    <string name="already_following">You are already following this user</string>
    <string name="notification_sent">Hug notification sent</string>
    <string name="title_activity_hug">HugActivity</string>
    <string name="accept_hug">Accept</string>
    <string name="ignore_hug">Ignore</string>
    <string name="accept_message">Do you want to accept the hug?</string>
    <string name="request_notification_title">Hug request</string>
    <string name="accept_notification_title">Hug accepted</string>
    <string name="title_activity_hug_info">HugInfoActivity</string>
    <string name="hug_accepted">Hug accepted!</string>
    <string name="hug_message_info">This is going to be a great hug! On the meanwhile we\'ll update your hug counters. By the way, you can still use the app map to reach each other. Enjoy!</string>
    <string name="a_user_accepted_hug">A user have accepted your hug</string>
    <string name="max_radius_label">Max map radius</string>
    <string name="zoom_level_label">Map zoom level</string>
    <string name="save">Save</string>
    <string name="active_users">Active users</string>
    <string name="explore">Explore</string>
    <string name="starred_users">Starred users</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="zoom">zoom</string>
    <string name="settings_saved">Settings saved</string>
</resources>
