<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidmogar.gimmeahug.activities.SignupActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="selectProfileImage"
        android:src="@drawable/profile"
        app:border_color="#FFF"
        app:border_width="4dp" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/accent"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/accept_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/accept_message"
        android:textColor="@color/primary_text" />

    <Button
        android:id="@+id/accept"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accept_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/flat_accent_button"
        android:onClick="acceptHug"
        android:text="@string/accept_hug"
        android:textColor="#fff" />

    <Button
        android:id="@+id/ignore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accept"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/flat_primary_button"
        android:onClick="ignoreHug"
        android:text="@string/ignore_hug"
        android:textColor="#fff" />

</RelativeLayout>
